--- a/Configs/appSettings.config
+++ b/Configs/appSettings.config
@@ -1,1 +1,14 @@
-
+﻿<appSettings>
+	<add key="webpages:Version" value="3.0.0.0" />
+	<add key="webpages:Enabled" value="false" />
+	<add key="PreserveLoginUrl" value="true" />
+	<add key="ClientValidationEnabled" value="true" />
+	<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="EncryptionKey" value="NdRgUkXp2s5v8x/A"/>
+	<!--<add key="SendGridApiKey" value="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"/>-->
+	<add key="SendGridApiKey" value="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"/>
+	<add key="FirebaseKey" value="AAAAY45IlDU:APA91bG_LLLsGmPg_B7apNlRVOBkGctoY160Enm8r9o6UT1J8doHzYbE37BjWHd-hGHZw1F1BPfWg1boHJuwj-MyswxrZZSvNFKOpGqANyhjWO5DjN3meBN5VwaeowHi0VcY7ycyR5Dt"/>
+	<add key="CASHFREE_APP_ID" value="29327a19a460dedda4569775272392"/>
+	<add key="CASHFREE_SECRET_KEY" value="84a7a5d8c422fa6b99a837d24703e700349400e9"/>
+	<add key="CASHFREE_URL" value="https://test.cashfree.com/api/v2/cftoken/order"/>
+</appSettings>
